--- a/respuestas.tex
+++ b/respuestas.tex
@@ -325,7 +325,7 @@ y las funciones que cumplen.\\
     
     \item ¿Por qué debería existir menos colisiones en una red Ethernet conmutada comparada con una red Ethernet tradicional?.\\
     Por que en las redes Ethernet conmutadas los equipos no comparten un canal único, en cambio las redes tradicionales se comparte el
-    canal de transmisión \\
+    canal de transmisión. \\
     \item Compare las tasas de transmision de datos para la red Ethernet tradicional, Fast Ethernet y Gigabit Ethernet\\
     La tasa de transmision de la Ethernet normal es de 10Mbps, la de Fast Ethernet es de 100Mbps, y la Gigabit Ethernet es de 1Gbps\\
     \item Indique la conﬁguracion de pines en conectores RJ45 para cables UTP cruzados FastEthernet y GigabitEthernet(falta)\\
@@ -349,8 +349,8 @@ y las funciones que cumplen.\\
             S es la potencia de la señal util\\
             N es la potencia del ruido\\
     \item  Las condiciones de dise˜no de un sistema de comunicaciones que cuenta con un ancho de banda de 1MHz y presenta una SNR de 24dB es que alcance los 4Mbps.Indicar si este proyecto bajo las condiciones de ruido y ancho de banda es viable.(COMPLETAR) \\
-    \item Un sistema de comunicaciones que posee un ancho de banda de 70 MHz y opera a 100 Mbps. Indicar la m´ınima SNR para que el sistema pueda funcionar(COMPLETAR) \\
-    \item  Compare la maxima capacidad del canal del par trenzado y el cable coaxial.Para el par trenzado el ancho de banda es de 100MHz y la SNR es de 20dB.Para el cable coaxial el ancho de banda es de 250 MHz y su SNR es de 22 dB. (COMPLETAR)\\
+    \item Un sistema de comunicaciones que posee un ancho de banda de 70 MHz y opera a 100 Mbps. Indicar la mínima SNR para que el sistema pueda funcionar(COMPLETAR) \\
+    \item  Compare la maxima capacidad del canal del par trenzado y el cable coaxial.\\Para el par trenzado el ancho de banda es de 100MHz y la SNR es de 20dB.Para el cable coaxial el ancho de banda es de 250 MHz y su SNR es de 22 dB. (COMPLETAR)\\
     \item  ¿Cual es la capacidad para un canal de un teletipo de 300Hz de ancho de banda con una relacion senal a ruido de 3dB? (COMPLETAR)\\
     \item Sea un canal con una capacidad de 20Mbps.El ancho de banda de dicho canal es 3MHz¿Cual es la relacion senal a ruido admisible para conseguir la mencionada capacidad? (COMPLETAR)\\
     \item  Un sistema de comunicaciones trabaja a 100 Mbps y utiliza un ancho de banda de 70 MHz ¿Cual es la cota inferior de la relacion SNR para que el sistema pueda funcionar?. Calcule la eﬁciencia espectral maxima que se puede alcanzar con una SNR de 0 dB. (COMPLETAR)\\
@@ -378,13 +378,14 @@ y las funciones que cumplen.\\
   \item Explique lo que entiende por distorsion por atenuacion y distorsion por dispersion\\
   La distorcion por atenuacion se produce por una disminucion de la potencia de la señal de transmicion a lo largo del cable, mientras que la distorcion por dispercion se produce por un ensanchamiento de la onda, el cual aumenta con la longitud recorrida y con el ancho de la fuente.\\
   \item Señale los distintos tipos de problemas que podrıa sufrir una ﬁbra optica\\
-  -Perdidas debido a acoplamiento con dispoditivo emisor de luz
-  -Perdidas debido a absorcion
-  -Perdidas debido a una presion externa
-  -Perdidas por radiacion debido a curvaturas 
-  -Perdidas debido a no uniformidad en el nucleo
-  -Perdidas por splicing
-  -Perdidas por acoplamiento con el receptor
+  -Perdidas debido a acoplamiento con dispoditivo emisor de luz\\
+  -Perdidas debido a absorcion\\
+  -Perdidas debido a una presion externa\\
+  -Perdidas por radiacion debido a curvaturas \\
+  -Perdidas debido a no uniformidad en el nucleo\\
+  -Perdidas por splicing\\
+  -Perdidas por acoplamiento con el receptor\\
+  -Perdidas debido a el doblamiento de el cable\\
   \item ¿Que es y que importancia tiene Level 3 en nuestro paıs?\\
   Level 3 es un provedor mundial de servicios convergentes de datos, voz, video, data center, y es importante ya que es el mayor provedor de redes de sudamerica\\
   \item . De acuerdo al enlace http://submarinecablemap.com ¿Cuantos enlaces submarinos tiene chile?.
