--- a/respuestas.tex
+++ b/respuestas.tex
@@ -358,7 +358,7 @@ y las funciones que cumplen.\\
     		SNR=10*log10(S/N) implica que S/N es igual a 158  \\
     		C=B*losg2(S/N) ahora evaluamos y C = 1825945187 bits/s\\
     	Se puede asumir que el par trenzado tiene una capacidad mucho mas menor que la capacidad de el cable coaxial por la forma
-    	en la que este esta creado.
+    	en la que este esta creado.\\
     
     \item  ¿Cual es la capacidad para un canal de un teletipo de 300Hz de ancho de banda con una relacion senal a ruido de 3dB? \\
     		primero ocupamos la formula SNR(db)=10*log10(S/N). despejamos S/N y evaluamos 3db.dandonos S/N un valor de 2.Ahora 
@@ -370,23 +370,32 @@ y las funciones que cumplen.\\
     	 	S/N = 100
     \item  Un sistema de comunicaciones trabaja a 100 Mbps y utiliza un ancho de banda de 70 MHz ¿Cual es la cota inferior de la relacion SNR para que el sistema pueda funcionar?. Calcule la eﬁciencia espectral maxima que se puede alcanzar con una SNR de 0 dB. (COMPLETAR)\\
     \item En que se diferencias los medios guiados de transmision de los no guiados\\
-    Que en los medios guiados la transmision de infirmacion se logra a traves de cables interconectados entre los equipos, mientrs que en los no guiados se realiza de manera inalambrica ya sea mediante antenas, las cuales emiten los datos en forma de señal electromagnetica\\
+    Que en los medios guiados la transmision de informacion se logra a traves de cables interconectados entre los equipos, 
+    mientras que en los no guiados se realiza de manera inalambrica ya sea mediante antenas, las cuales emiten los datos en forma de 
+    señal electromagnetica\\
+    
     \item Indique 3 fuentes de distorsion de la señal en un cable UTP\\
     -Emisiones electromagneticas del entorno\\
     -Distancias mayores a 100 mt entre terminales\\
-    -(COMPLETAR)\\
+    -Emisiones electromagneticas entre los propios cables\\
     \item Indique las diferencias entre los cables UTP, STP y FTP\\
-    El cable UTP no pose ningun tipo de blindaje, el STP pose un cubierta exterior de aluminio que protege de señales electromagneticas exteriores, y el FTP pose blindaje tanto en los pares trenzados como en el exterior y asi evita cualquier tipo de distorcion que puedan sufrir los datos.\\
+    El cable UTP no pose ningun tipo de blindaje, el STP pose un cubierta exterior de aluminio que protege de señales 
+    electromagneticas exteriores, y el FTP pose blindaje tanto en los pares trenzados como en el exterior y asi evita cualquier tipo 
+    de distorcion que puedan sufrir los datos.\\
     \item  ¿Por que el cable coaxial es superior al par trenzado?.\\
-    Es superior solo en el hecho que es mas inmune a señales electromagneticas del exterior ya que este posee materiales aislantes.\\
+    Es superior solo en el hecho que es mas inmune a señales electromagneticas del exterior ya que este posee materiales aislantes 
+    que son dielectricos.\\
     \item Explique el concepto de impedacia de los medios de transmision.¿Porque es importante tener en cuenta este parametro al momento de interconectar equipos? \\
-    La impedancia es la relacion entre la tension y intenciada de corriente, es importante tenerla en cuenta al momento de armar una red ya que si un medio recive una impedancia mayor a la maxima que admite, este se puede quemar y dañar toda la red.\\
+    La impedancia es la relacion entre la tension y intenciada de corriente, es importante tenerla en cuenta al momento de armar una red ya que si un medio recibe una impedancia mayor a la maxima que admite, este se puede quemar y dañar toda la red.\\
     \item ¿Cual es la ventaja de un par trenzado blindado sobre el par trenzado normal?.\\
-    El par trenzado blindado es resistente a las emisiones electromagneticas del exterior, por lo que sus datos no se veran afectados por estas emisiones.\\
+    El par trenzado blindado es resistente a las emisiones electromagneticas del exterior, por lo que sus capacidad no se verá 
+    afectada por estas emisiones.\\
     \item ¿A que se reﬁeren las pruebas de NEXT, FEXT, PSNEXT y PSFEXT, ELFEXT, PS-ELFEXT en cable UTP?\\
     Son ruebas relacionadas con la atenuacion y el crosstalk, nos ayudan para determinar la longitud maxima que puede extenderse un cable.\\
   \item Señale las principales caracterısticas del cable de ﬁbra optica monomodo.\\
-  Posee un unico nucleo, el cual tiene un lazer led(COMPLEMENTAR)\\
+  Posee un unico nucleo, el cual es un material dielectrico y por el cual se proyecta un haz de luz.\\
+  Funciona gracias a el angulo de refracción total, ya que permite el "reflejo" casi total de todo el haz de luz,logrando así
+  un ciclo infinito hasta que llegue al final o se cambie el angulo.
   \item Señale las principales caracterısticas del cable de ﬁbra optica multimodo. \\
   Posee multiples nucleos, los cuales estan formados por leds(  complementar)\\
   \item Senale las principales caracterısticas del cable de ﬁbra optica multimodo conındice gradual(COMPLETAR)\\
