--- a/respuestas.tex
+++ b/respuestas.tex
@@ -393,12 +393,22 @@ y las funciones que cumplen.\\
     \item ¿A que se reﬁeren las pruebas de NEXT, FEXT, PSNEXT y PSFEXT, ELFEXT, PS-ELFEXT en cable UTP?\\
     Son ruebas relacionadas con la atenuacion y el crosstalk, nos ayudan para determinar la longitud maxima que puede extenderse un cable.\\
   \item Señale las principales caracterısticas del cable de ﬁbra optica monomodo.\\
+  
   Posee un unico nucleo, el cual es un material dielectrico y por el cual se proyecta un haz de luz.\\
-  Funciona gracias a el angulo de refracción total, ya que permite el "reflejo" casi total de todo el haz de luz,logrando así
-  un ciclo infinito hasta que llegue al final o se cambie el angulo.
+  Aumentando así la rapidez con la cual se propaga ya que no se intersecta con ningún otro haz de luz que haya
+  ingresado al material y este viaja de forma lineal.Este tipo de conexión de fibra optica es mas cara debido a que
+  para propagar ese haz de luz es necesaria una fuente de luz más cara.
+  
   \item Señale las principales caracterısticas del cable de ﬁbra optica multimodo. \\
-  Posee multiples nucleos, los cuales estan formados por leds(  complementar)\\
-  \item Senale las principales caracterısticas del cable de ﬁbra optica multimodo conındice gradual(COMPLETAR)\\
+  
+  Posee multiples haces de luz dentro de su material dielectrico,aumentando la posibilidad de disminuir
+  su rapidez en la que se propaga ya que al haber muchos haces de luz estos pueden chocar provocando asi
+  problemas con su transmisión.Este tipo de conexión de fibra optica es mas barata debido a que su cavidad de el
+  materia dielectrico es mas grande, y gracias a esto poder ocupar fuentes de luz más baratas
+  
+  \item Senale las principales caracterısticas del cable de ﬁbra optica multimodo con índice gradual(COMPLETAR)\\
+  
+  
   \item Explique lo que entiende por distorsion por atenuacion y distorsion por dispersion\\
   La distorcion por atenuacion se produce por una disminucion de la potencia de la señal de transmicion a lo largo del cable, mientras que la distorcion por dispercion se produce por un ensanchamiento de la onda, el cual aumenta con la longitud recorrida y con el ancho de la fuente.\\
   \item Señale los distintos tipos de problemas que podrıa sufrir una ﬁbra optica\\
@@ -451,6 +461,8 @@ c) El ángulo de incidencia es mayor que el ángulo crıtico: El haz de luz es r
 -La fibra monomodo posee un mayor ancho de banda que la multimodo.\\
 -La fibra monomodo posee menor atenuación que la multimodo.\\
 -La fibra monomodo cubre mayores distancias que la multimodo.\\
+-La fibra monomodo funciona tan solo con 1 haz de luz\\
+-La fibra multimodo tiene mas de 1 haz de luz\\
 -La fibra multimodo es de más fácil instalación.\\
 -La fibra multimodo es de uso doméstico mientras que la monomodo es de uso industrial.\\
 \item Indique los anchos de bandas disponibles para líneas dedicadas del tipo T y E.\\
