--- a/respuestas.tex
+++ b/respuestas.tex
@@ -406,8 +406,13 @@ y las funciones que cumplen.\\
   problemas con su transmisión.Este tipo de conexión de fibra optica es mas barata debido a que su cavidad de el
   materia dielectrico es mas grande, y gracias a esto poder ocupar fuentes de luz más baratas
   
-  \item Senale las principales caracterısticas del cable de ﬁbra optica multimodo con índice gradual(COMPLETAR)\\
-  
+  \item Señale las principales caracterısticas del cable de ﬁbra optica multimodo con índice gradual(COMPLETAR)\\
+  	
+  	En este tipo de fibra óptica, el núcleo está constituido de varias capas concéntricas de material óptico 
+  	con diferentes índices de refracción, causando que el rayo de luz de refracte poco a poco mientras viaja 
+  	por el núcleo, pareciendo que el rayo se curva .
+
+En estas fibras el número de rayos ópticos diferentes que viajan es menor que en el caso de la fibra multimodo índice escalonado 
   
   \item Explique lo que entiende por distorsion por atenuacion y distorsion por dispersion\\
   La distorcion por atenuacion se produce por una disminucion de la potencia de la señal de transmicion a lo largo del cable, mientras que la distorcion por dispercion se produce por un ensanchamiento de la onda, el cual aumenta con la longitud recorrida y con el ancho de la fuente.\\
